--- a/README
+++ b/README
@@ -1,1 +1,13 @@
-WaspAce
+Web Manager WaspAce.
+====================
+
+Авторы
+-----------
+Architector
+MrAnger
+Sting
+
+Краткое описание
+----------------
+
+Представляет собой обертку для взаимодействия с WaspAce API для настройки WaspAce аккаунта.
