--- a/README
+++ b/README
@@ -1,13 +1,13 @@
 Web Manager WaspAce.
 ====================
 
-Авторы
+РђРІС‚РѕСЂС‹
 -----------
 Architector
 MrAnger
 Sting
 
-Краткое описание
+РљСЂР°С‚РєРѕРµ РѕРїРёСЃР°РЅРёРµ
 ----------------
 
-Представляет собой обертку для взаимодействия с WaspAce API для настройки WaspAce аккаунта.
+РџСЂРµРґСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ РѕР±РµСЂС‚РєСѓ РґР»СЏ РІР·Р°РёРјРѕРґРµР№СЃС‚РІРёСЏ СЃ WaspAce API. РСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ РґР»СЏ РЅР°СЃС‚СЂРѕР№РєРё WaspAce Р°РєРєР°СѓРЅС‚Р°.
